<resources>
    <string name="app_name">News</string>
    <string name="headlines">Headlines</string>
    <string name="saved">Saved</string>
    <string name="sources">Sources</string>
    <string name="general">General</string>
    <string name="business">Business</string>
    <string name="science">Science</string>
    <string name="news_app">News APP</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="popular">Popular</string>
    <string name="new_title">New</string>
    <string name="relevant">Relevant</string>
    <string name="date">Date</string>
    <string name="choose_date">Choose date</string>
    <string name="rus">Русский</string>
    <string name="english">English</string>
    <string name="deutsch">Deutsch</string>
    <string name="language">Language</string>
    <string name="filters">Filters</string>
    <string name="select_date">Select date</string>
    <string name="save">save</string>
    <string name="no_content">We can\'t display the content right now.\n Try later</string>
</resources>