<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_light_primary"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleCentered="true"
            app:titleTextColor="@color/md_theme_light_background"
            app:title="@string/filters"
            app:menu="@menu/headline_app_bar_menu"
            android:theme="@style/AppTheme.Toolbar"
            />

    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/appBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:theme="@style/AppTheme.Custom.OutlineButton"
            android:id="@+id/popular"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/popular" />

        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:theme="@style/AppTheme.Custom.OutlineButton"
            android:id="@+id/newButton"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/new_title" />

        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:theme="@style/AppTheme.Custom.OutlineButton"
            android:id="@+id/relevant"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/relevant" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/date"
        android:textStyle="bold"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton" />

    <TextView
        android:id="@+id/date_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:textStyle="bold"
        android:textColor="@color/md_theme_light_outline"
        app:layout_constraintBottom_toBottomOf="@+id/date_title"
        app:layout_constraintTop_toTopOf="@+id/date_title"
        app:layout_constraintEnd_toStartOf="@+id/date_button"
        android:text="@string/choose_date"/>

    <ImageButton
        android:id="@+id/date_button"
        android:background="@color/md_theme_light_background"
        android:src="@drawable/ic_calendar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/date_title"
        app:layout_constraintBottom_toBottomOf="@+id/date_title"/>

    <TextView
        android:id="@+id/language_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_title"
        android:text="@string/language"/>


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/toggleLang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/language_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:selectionRequired ="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rus"
            android:text="@string/rus"
            android:theme="@style/AppTheme.Custom.OutlineButton" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/eng"
            android:text="@string/english"
            android:theme="@style/AppTheme.Custom.OutlineButton" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deutsch"
            android:text="@string/deutsch"
            style="@style/Widget.Material3.Chip.Suggestion"
            android:theme="@style/AppTheme.Custom.OutlineButton" />

    </com.google.android.material.chip.ChipGroup>


</androidx.constraintlayout.widget.ConstraintLayout>